--- a/index.html
+++ b/index.html
@@ -5,14 +5,79 @@
 <html lang="en"> <!-- to write the page in this lang or to convert into languages 
                 like google asks to translate the page in particular lang-->
 <head> 
-    <meta charset="UTF-8"> <!--alphabets(small & capital, numbers, special characters); UTF-16 shows different variants of the letters, numbers and special characters-->
+    <meta charset="UTF-8"> <!--UTF-8: alphabets(small & capital, numbers, special characters); UTF-16 shows different variants of the letters, numbers and special characters-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--Important to make a resposive website-->
-    <title>Juhi</title>
+    <title>My First HTML Page</title>
+    <style>
+        body{
+            background-color: beige;
+        }
+    </style>
+    <style>
+        table,tr,th,td{
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
-    <h1>Juhi</h1>
-    <p>Juhi</p>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est error maiores minima, quisquam, eum assumenda eveniet odit veniam aliquam architecto quasi iure nobis vel fuga?</p>
-
+    <h1>Juhi Dugar</h1>
+    <p>Front-End Web Develepor | Aspiring Full Stack Developer | <br>Email id: dugarjuhi.635@gmail.com | Phone number: 8335901888</p>
+    <h2><u>LINKS:</u></h2>
+    <a href="https://www.linkedin.com/in/juhi-dugar/" target="_blank">LinkedIn</a>
+    <a href="https://github.com/Juhi635" target="_blank">Github</a>
+    <h2><u>ABOUT ME:</u></h2>
+    <p>A motivated individual passionate about the evolving landscape of technology. My journey through academics and diverse extracurricular involvements reflects my <br> commitment to continuous growth and learning. I thrive on exploring the endless potential of computer science, captivated by its power to solve intricate problems <br> and drive innovation. Excited about the transformative era we're
+    entering, I aim to use programming and problem-solving to create impactful solutions in pioneering <br> technologies. Seeking to pursue a degree in computer science to delve deeper into this dynamic field and be a part of groundbreaking advancements.</p>
+    <h2><u>SKILLS:</u></h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Skill</th>
+                <th>Level</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>HTML</td>
+                <td>Beginner</td>
+            </tr>
+            <tr>
+                <td>C Programming</td>
+                <td>Beginner</td>
+            </tr>
+            <tr>
+                <td>JAVA</td>
+                <td>Beginner</td>
+            </tr>
+            <tr>
+                <td>MS Excel</td>
+                <td>Intermediate</td>
+            </tr>
+        </tbody>
+    </table>
+    <h2><u>EDUCATION:</u></h2>
+    <ul>
+        <li><b>UNDERGRADUATION:</b><br>Indian Institute of Technology,Guwahati(IITG)<br><i>BSc(Hons.) in Data Science and Artificial Intelligence</i><br><i>2023-2027</i></li>
+        <br>
+        <li><b>CLASS 12:</b><br><i>Central Board Of Secondary Education(CBSE)</i><br><i>Completed in 2023</i></li>
+        <br>
+        <li><b>CLASS 10:</b><br><i>Central Board Of Secondary Education(CBSE)</i><br><i>Completed in 2021</i></li>
+    </ul>
+    <h2><u>CERTIFICATION:</u></h2>
+    <ul>
+        <li><b>PHYSICSWALLAH INSTITUTE OF INNOVATION(PW IOI)</b><br><i>Pursuing Diploma in Computer Science and Artificial Intelligence</i></li>
+    </ul>
+    <h2><u>LANGUAGES:</u></h2>
+    <ul>
+        <li><i>Hindi</i></li>
+        <li><i>English</i></li>
+        <li><i>Bengali</i></li>
+    </ul>
+    <h2><u>HOBBIES:</u></h2>
+    <ul>
+        <li><i>Dance</i></li>
+        <li><i>Social Service</i></li>
+        <li><i>Skating</i></li>
+    </ul>
 </body>
 </html>
